[gd_scene load_steps=5 format=3 uid="uid://cqdro5qne4ntt"]

[ext_resource type="Script" path="res://Main.gd" id="1_uufvl"]
[ext_resource type="AudioStream" uid="uid://cv7wuah7k82ho" path="res://ArtAssets/Audio/TitleScreen/TitleScreenLoop1.wav" id="2_qi5cb"]
[ext_resource type="PackedScene" uid="uid://cccvsiorwsaq2" path="res://UI/start_menu.tscn" id="2_s22xw"]
[ext_resource type="PackedScene" uid="uid://bmlhgvnxyd87" path="res://UI/pause_menu.tscn" id="3_3cpd8"]

[node name="Main" type="Node"]
process_mode = 3
script = ExtResource("1_uufvl")

[node name="titleAudioLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_qi5cb")
autoplay = true

[node name="Main3D" type="Node3D" parent="."]
process_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StartMenu" parent="CanvasLayer" instance=ExtResource("2_s22xw")]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("3_3cpd8")]
visible = false
